--- a/.gitignore
+++ b/.gitignore
@@ -98,6 +98,10 @@ __pypackages__/
 celerybeat-schedule
 celerybeat.pid
 
+docker-compose.debug.yml
+docker-compose.yml 
+
+
 # SageMath parsed files
 *.sage.py
 
